docker build stuck
=> [5/5] RUN mvn clean package -DskipTests -q                                                                                                                         106.1s