@@ -14,11 +14,15 @@ import org.springframework.jdbc.core.JdbcTemplate;
 @Configuration
 public class DataSourceConfig {
 
+  // Static fields first
   private static final Logger LOGGER = LoggerFactory.getLogger(DataSourceConfig.class);
-
-  private final InfisicalService infisicalService;
-
   private static final int PROTOCOL_SEPARATOR_LENGTH = 3;
+  private static final String JDBC_PREFIX = "jdbc:"; // Fix duplicate literals
+  private static final String POSTGRESQL_PREFIX = "postgresql://";
+  private static final String JDBC_POSTGRESQL_PREFIX = "jdbc:postgresql://";
+
+  // Instance fields after static fields
+  private final InfisicalService infisicalService;
 
   @Value("${infisical.project-id}")
   private String infisicalProjectId;
@@ -40,157 +44,158 @@ public class DataSourceConfig {
   @Bean
   @Primary
   public DataSource dataSource() {
-    String databaseUrl = null;
+    String databaseUrl = retrieveDatabaseUrl();
+    return createDataSource(databaseUrl);
+  }
 
+  private String retrieveDatabaseUrl() {
     try {
       LOGGER.info("Attempting to configure DataSource with Infisical secrets...");
-      LOGGER.info(
-          "Looking for DATABASE_URL in project: {}, environment: {}, path: {}",
-          infisicalProjectId,
-          infisicalEnvironment,
-          infisicalSecretPath);
+      
+      String lookupMessage = String.format(
+          "Looking for DATABASE_URL in project: %s, environment: %s, path: %s",
+          infisicalProjectId, infisicalEnvironment, infisicalSecretPath);
+      LOGGER.info(lookupMessage);
 
-      databaseUrl =
-          infisicalService.getSecret(
-              "DATABASE_URL", infisicalProjectId, infisicalEnvironment, infisicalSecretPath);
+      String databaseUrl = infisicalService.getSecret(
+          "DATABASE_URL", infisicalProjectId, infisicalEnvironment, infisicalSecretPath);
 
-      if (databaseUrl != null && !databaseUrl.trim().isEmpty()) {
+      if (databaseUrl != null && !databaseUrl.isBlank()) {
         LOGGER.info("Successfully retrieved DATABASE_URL from Infisical");
+        return databaseUrl;
       } else {
-        throw new RuntimeException("DATABASE_URL secret is null or empty");
+        throw new DataSourceConfigurationException(
+            "DATABASE_URL secret is null or empty from Infisical service");
       }
 
-    } catch (Exception e) {
-      LOGGER.warn(
-          "Failed to retrieve DATABASE_URL from Infisical: {}. Using fallback configuration.",
-          e.getMessage());
-
-      // Use fallback values
-      databaseUrl = fallbackDatabaseUrl;
-      LOGGER.info("Using fallback database configuration: {}", maskUrl(databaseUrl));
+    } catch (IllegalArgumentException e) {
+      LOGGER.warn("Invalid configuration for Infisical: {}. Using fallback configuration.", 
+                  e.getMessage());
+      return fallbackDatabaseUrl;
+    } catch (RuntimeException e) {
+      LOGGER.warn("Failed to retrieve DATABASE_URL from Infisical: {}. Using fallback configuration.", 
+                  e.getMessage());
+      LOGGER.info("Using fallback database configuration: {}", maskUrl(fallbackDatabaseUrl));
+      return fallbackDatabaseUrl;
     }
+  }
 
+  private DataSource createDataSource(String databaseUrl) {
     try {
-      // Parse the PostgreSQL URL to extract components
       DatabaseUrlComponents components = parsePostgreSQLUrl(databaseUrl);
 
-      DataSourceBuilder<?> builder =
-          DataSourceBuilder.create()
-              .url(components.jdbcUrl)
-              .username(components.username)
-              .password(components.password)
-              .driverClassName("org.postgresql.Driver");
+      DataSourceBuilder<?> builder = DataSourceBuilder.create()
+          .url(components.jdbcUrl())
+          .username(components.username())
+          .password(components.password())
+          .driverClassName("org.postgresql.Driver");
 
       DataSource dataSource = builder.build();
       LOGGER.info("DataSource configured successfully");
       return dataSource;
 
-    } catch (Exception e) {
+    } catch (IllegalArgumentException e) {
       LOGGER.error("Failed to create DataSource: {}", e.getMessage());
-      throw new RuntimeException("Failed to configure DataSource", e);
+      throw new DataSourceConfigurationException(
+          "Invalid database configuration parameters: " + e.getMessage(), e);
     }
   }
 
   private DatabaseUrlComponents parsePostgreSQLUrl(final String url) {
-    try {
-      // Handle postgresql:// URLs
-      if (url.startsWith("postgresql://")) {
-        // Remove the postgresql:// prefix
-        String urlWithoutProtocol = url.substring("postgresql://".length());
-
-        String username = null;
-        String password = null;
-        String hostPortDb;
-
-        // Check if credentials are present
-        if (urlWithoutProtocol.contains("@")) {
-          String[] credentialsAndHost = urlWithoutProtocol.split("@", 2);
-          String credentials = credentialsAndHost[0];
-          hostPortDb = credentialsAndHost[1];
-
-          if (credentials.contains(":")) {
-            String[] userPass = credentials.split(":", 2);
-            username = userPass[0];
-            password = userPass[1];
-          } else {
-            username = credentials;
-          }
-        } else {
-          hostPortDb = urlWithoutProtocol;
-        }
-
-        // Construct JDBC URL
-        String jdbcUrl = "jdbc:postgresql://" + hostPortDb;
-
-        return new DatabaseUrlComponents(jdbcUrl, username, password);
-      }
-
-      // If already in JDBC format, try to parse it
-      if (url.startsWith("jdbc:postgresql://")) {
-        return new DatabaseUrlComponents(url, null, null);
-      }
-
-      // Fallback - assume it needs jdbc: prefix
-      return new DatabaseUrlComponents("jdbc:" + url, null, null);
-
-    } catch (Exception e) {
-      LOGGER.error("Failed to parse database URL: {}", e.getMessage());
-      throw new RuntimeException("Invalid database URL format", e);
+    if (url == null || url.isBlank()) {
+      throw new DataSourceConfigurationException("Database URL cannot be null or blank");
     }
+
+    if (url.startsWith(POSTGRESQL_PREFIX)) {
+      return parsePostgresUrl(url);
+    }
+    
+    if (url.startsWith(JDBC_POSTGRESQL_PREFIX)) {
+      return new DatabaseUrlComponents(url, null, null);
+    }
+
+    // Fallback - assume it needs jdbc: prefix
+    return new DatabaseUrlComponents(JDBC_PREFIX + url, null, null);
+  }
+
+  private DatabaseUrlComponents parsePostgresUrl(String url) {
+    // Remove the postgresql:// prefix
+    String urlWithoutProtocol = url.substring(POSTGRESQL_PREFIX.length());
+
+    if (urlWithoutProtocol.contains("@")) {
+      return parseUrlWithCredentials(urlWithoutProtocol);
+    } else {
+      // No credentials in URL
+      String jdbcUrl = JDBC_POSTGRESQL_PREFIX + urlWithoutProtocol;
+      return new DatabaseUrlComponents(jdbcUrl, null, null);
+    }
+  }
+
+  private DatabaseUrlComponents parseUrlWithCredentials(String urlWithoutProtocol) {
+    String[] credentialsAndHost = urlWithoutProtocol.split("@", 2);
+    if (credentialsAndHost.length != 2) {
+      throw new DataSourceConfigurationException("Invalid URL format: missing host after @");
+    }
+
+    String credentials = credentialsAndHost[0];
+    String hostPortDb = credentialsAndHost[1];
+
+    String username;
+    String password = null;
+
+    if (credentials.contains(":")) {
+      String[] userPass = credentials.split(":", 2);
+      username = userPass[0];
+      password = userPass[1];
+    } else {
+      username = credentials;
+    }
+
+    String jdbcUrl = JDBC_POSTGRESQL_PREFIX + hostPortDb;
+    return new DatabaseUrlComponents(jdbcUrl, username, password);
   }
 
   private record DatabaseUrlComponents(String jdbcUrl, String username, String password) {}
-
-  /** Convert postgresql:// URLs to jdbc:postgresql:// format */
-  private String convertToJdbcUrl(final String url) {
-    if (url == null) {
-      return null;
-    }
-    LOGGER.debug("Converting URL: {}", maskUrl(url));
-
-    // Convert various URL formats to JDBC format
-    if (url.startsWith("postgresql://")) {
-      String jdbcUrl = "jdbc:" + url;
-      LOGGER.debug("Converted to JDBC URL: {}", maskUrl(jdbcUrl));
-      return jdbcUrl;
-    } else if (url.startsWith("mysql://")) {
-      return "jdbc:" + url;
-    } else if (url.startsWith("jdbc:")) {
-      return url; // Already in JDBC format
-    }
-
-    // If no known prefix, assume it needs jdbc: prefix
-    return url.startsWith("jdbc:") ? url : "jdbc:" + url;
-  }
 
   @Bean
   public JdbcTemplate jdbcTemplate(final DataSource dataSource) {
     return new JdbcTemplate(dataSource);
   }
 
-  private String determineDriverClassName(final String databaseUrl) {
-    if (databaseUrl.startsWith("jdbc:postgresql:")) {
-      return "org.postgresql.Driver";
-    } else if (databaseUrl.startsWith("jdbc:mysql:")) {
-      return "com.mysql.cj.jdbc.Driver";
-    } else if (databaseUrl.startsWith("jdbc:h2:")) {
-      return "org.h2.Driver";
-    } else if (databaseUrl.startsWith("jdbc:sqlserver:")) {
-      return "com.microsoft.sqlserver.jdbc.SQLServerDriver";
-    }
-    return null;
-  }
-
   private String maskUrl(final String url) {
     if (url == null) {
       return "null";
     }
-    // Simple masking for security
+    
     if (url.contains("://") && url.contains("@")) {
       int protocolEnd = url.indexOf("://") + PROTOCOL_SEPARATOR_LENGTH;
-      int atIndex = url.lastIndexOf("@");
+      int atIndex = url.lastIndexOf('@');
       return url.substring(0, protocolEnd) + "***:***" + url.substring(atIndex);
     }
     return url;
+  }
+
+  @Override
+  public String toString() {
+    return "DataSourceConfig{"
+        + "infisicalService=" + infisicalService
+        + ", infisicalProjectId='" + infisicalProjectId + '\''
+        + ", infisicalEnvironment='" + infisicalEnvironment + '\''
+        + ", infisicalSecretPath='" + infisicalSecretPath + '\''
+        + ", fallbackDatabaseUrl='" + maskUrl(fallbackDatabaseUrl) + '\''
+        + '}';
+  }
+
+  // Custom exception class with serialVersionUID
+  public static class DataSourceConfigurationException extends RuntimeException {
+    private static final long serialVersionUID = 1L;
+
+    public DataSourceConfigurationException(final String message) {
+      super(message);
+    }
+
+    public DataSourceConfigurationException(final String message, final Throwable cause) {
+      super(message, cause);
+    }
   }
 }
